# lattice_boltzmann_uni_praktikum

./: README.md  test.c
implementation/: CMakeLists.txt  LBM.cpp  LBM.h  main.cpp
literature&resources/: links.md
